--- a/config/database.yml
+++ b/config/database.yml
@@ -48,8 +48,16 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
+# production:
+#   <<: *default
+#   database: guruguru_production
+#   username: guruguru
+#   password: <%= ENV['GURUGURU_DATABASE_PASSWORD'] %>
+
 production:
   <<: *default
-  database: guruguru_production
-  username: guruguru
-  password: <%= ENV['GURUGURU_DATABASE_PASSWORD'] %>
+  adapter: mysql2
+  database: （アプリ名）_production
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
