--- a/config/database.yml
+++ b/config/database.yml
@@ -57,7 +57,8 @@ test:
 production:
   <<: *default
   adapter: mysql2
-  database: （アプリ名）_production
+  database: guruguru_production
   username: root
   password: <%= ENV['DATABASE_PASSWORD'] %>
   socket: /var/lib/mysql/mysql.sock
+  
